--- a/index.html
+++ b/index.html
@@ -2,18 +2,10 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>My Hometown is Nur-Sultan</title>
+<title>My Hometown</title>
 </head>
 <body>
-<h1 style="color:aqua" font size="54">Nur-Sultan</h1>
-<p>
-    <img src="image 1.jpg" width="600" length="300">
-</p>
-<p>
-    <a href="index.html11.html">Introduction</a>
-</p>
-<p>
-    <a href="index.html12.html">Geography</a>
-</p>
+<h1>Hello World</h1>
+<p>Some content</p>
 </body>
 </html>
