--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>My Hometown</title>
+<title>My Website</title>
 </head>
 <body>
-<h1>Page Header</h1>
-<p>Some content</p>
+<h1>Hello, World!</h1>
 </body>
 </html>
