--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
        <section>
         <article class="SDC">
         <h4>Article 1</h4>
-        <p>
+        <p class="article 1">
           Lorem ipsum dolor sit amet consectetur, 
           adipisicing elit. Odit, fugiat eveniet! 
           Optio quia perspiciatis earum ipsa dicta 
@@ -245,7 +245,7 @@
       </article>
       <article class="SDC">
         <h4>Article 2</h4>
-        <p>
+        <p class="article 2">
           Lorem ipsum dolor sit amet consectetur, 
           adipisicing elit. Odit, fugiat eveniet! 
           Optio quia perspiciatis earum ipsa dicta 
@@ -257,7 +257,7 @@
       </article>
       <article class="SDC">
         <h4>Article 3</h4>
-        <p>
+        <p class="article 3">
           Lorem ipsum dolor sit amet consectetur, 
           adipisicing elit. Odit, fugiat eveniet! 
           Optio quia perspiciatis earum ipsa dicta 
