--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
       </section>
      
         <h3>Some Dummy Content</h3>
-       <section>
+       <section class="SDC1">
         <article class="SDC">
         <h4>Article 1</h4>
         <p class="article 1">
