--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
                     <p class="links__description">Are you interested in collaborating or want to connect or chat? If so, hit the social media icon below or contact me via LinkedIn.</p>
                     <div class="links__media">
                         <!-- href="" cюда нужно добавить ссылки на социальные медиа -->
-                        <a href="" target="_blank" class="media__icon">
+                        <a href="https://www.instagram.com/sabq__/" target="_blank" class="media__icon">
                             <i class="uil uil-linkedin-alt"></i>
                         </a>
-                        <a href="" target="_blank" class="media__icon">
+                        <a href="https://www.instagram.com/sabq__/" target="_blank" class="media__icon">
                             <i class="uil uil-dribbble"></i>
                         </a>
-                        <a href="" target="_blank" class="media__icon">
+                        <a href="https://www.instagram.com/sabq__/" target="_blank" class="media__icon">
                             <i class="uil uil-github-alt"></i>
                         </a>
                     </div>
